syntax = "proto3";
package bookcatalogue;

service BookCatalogue {
    rpc getProduct(BookIsbn) returns (Book);
}
message Book {
    string isbn = 1;
    string title = 2;
    string author = 3;
    int32 publishingYear = 4;
    float price = 5;
}

message BookIsbn {
    string isbn = 1;
}